# Fat-Flappy-Dragon

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  math.h
